--- a/drink-app/src/styles/Search.css
+++ b/drink-app/src/styles/Search.css
@@ -19,3 +19,10 @@
     color: blue;
     font-family: Cambria;
 }
+input{
+    box-sizing: border-box;
+    padding: 10px 10px;
+    font-size: 23px;
+    font-weight: bold;
+    border-radius: 7px;
+}
